return the whole job object
